--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -355,6 +355,19 @@
                     </ol>
                 </nav>
 
+                <div class="row mt-3">
+                    <div class="card info-card">
+                        <div class="search-bar mt-4">
+                            <div class="search-bar">
+                                <div class="search-form d-flex align-items-center">
+                                    <input type="search" name="driver_Id" id="search_Id" placeholder="Search" title="Enter search keyword">
+                                    <button type="button" title="Search"><i class="bi bi-search"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Search Bar -->
+                    </div>
+                </div>
             </section>
         </div>
         <!-- End Driver Manage -->
