driver form added

--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -366,6 +366,12 @@
                             </div>
                         </div>
                         <!-- End Search Bar -->
+                        <div class="row">
+                            <div class="col-xl-12 m-3">
+                                <form class="row" id="driverForm">
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
