--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -369,6 +369,33 @@
                         <div class="row">
                             <div class="col-xl-12 m-3">
                                 <form class="row" id="driverForm">
+                                    <section id="sec1Driver" class="col-md-4 mt-3">
+                                        <div class="mb-sm-0 col-md-11">
+                                            <label class="form-label" for="user_Id">Driver Id</label>
+                                            <input class="form-control" id="user_Id" readonly type="text" name="user_Id" placeholder="DRI-001">
+                                            <span class="control-error"></span>
+                                        </div>
+                                        <div class="mb-sm-0 mt-3 col-md-11">
+                                            <label class="form-label" for="firstName">First Name</label>
+                                            <input class="form-control" id="firstName" type="text" name="firstName" placeholder="First Name">
+                                            <span class="control-error"></span>
+                                        </div>
+                                        <div class="mb-sm-0 mt-3 col-md-11">
+                                            <label class="form-label" for="lastName">Last Name</label>
+                                            <input class="form-control" id="lastName" type="text" name="lastName" placeholder="Last Name">
+                                            <span class="control-error"></span>
+                                        </div>
+                                        <div class="mb-sm-0 mt-3 col-md-11">
+                                            <label class="form-label" for="contact_No">Contact Number</label>
+                                            <input class="form-control" id="contact_No" type="text" name="contact_No" placeholder="Contact Number">
+                                            <span class="control-error"></span>
+                                        </div>
+                                        <div class="mb-sm-0 mt-3 col-md-11">
+                                            <label class="form-label" for="address">Address</label>
+                                            <input class="form-control" id="address" type="text" name="address" placeholder="Address">
+                                            <span class="control-error"></span>
+                                        </div>
+                                    </section>
                                 </form>
                             </div>
                         </div>
