--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -396,6 +396,35 @@
                                             <span class="control-error"></span>
                                         </div>
                                     </section>
+                                    <section id="sec2Driver" class="col-md-4 mt-3">
+                                        <div class="mb-sm-0 col-md-11">
+                                            <label class="form-label" for="email">Email</label>
+                                            <input class="form-control" id="email" type="text" name="email" placeholder="Email Address">
+                                            <span class="control-error"></span>
+                                        </div>
+                                        <div class="mb-sm-0 mt-3 col-md-11">
+                                            <label class="form-label" for="nic_No">NIC Number</label>
+                                            <input class="form-control" id="nic_No" type="text" name="nic_No" placeholder="National ID">
+                                            <span class="control-error"></span>
+                                        </div>
+                                        <div class="mb-sm-0 mt-3 col-md-11">
+                                            <label class="form-label" for="license_No">Driving License ID</label>
+                                            <input class="form-control" id="license_No" type="text" name="license_No" placeholder="Driving License">
+                                            <span class="control-error"></span>
+                                        </div>
+                                        <div class="mb-sm-0 mt-3 col-md-11">
+                                            <label class="form-label" for="license_Img">Driving License image</label>
+                                            <input class="form-control" id="license_Img" type="file" name="license_Img">
+                                            <span class="control-error"></span>
+                                        </div>
+                                        <div class="mb-sm-0 mt-3 col-md-11">
+                                            <label class="form-label" for="driverAvailability">Availability</label>
+                                            <select class="form-control" id="driverAvailability" name="driverAvailability">
+                                                <option value="AVAILABLE">AVAILABLE</option>
+                                            </select>
+                                            <span class="control-error"></span>
+                                        </div>
+                                    </section>
                                 </form>
                             </div>
                         </div>
