--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -457,6 +457,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card info-card">
+                        <!-- View Driver Details Table Start -->
+                        <div class="row mt-1 mt-md-2 mt-lg-4 justify-content-around" style="height: 320px;">
+                            <div class="col-11 justify-content-around sectionBorder"
+                                 style="height: 290px; background: white">
+                                <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- View Driver Details Table End -->
+                    </div>
                 </div>
             </section>
         </div>
