--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -463,6 +463,26 @@
                             <div class="col-11 justify-content-around sectionBorder"
                                  style="height: 290px; background: white">
                                 <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
+                                    <table class="table text-nowrap table-light table-striped table-bordered table-hover">
+                                        <thead class="text-dark table-danger text-center  table-bordered sticky-top">
+                                        <tr>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">First Name</th>
+                                            <th scope="col">Last Name</th>
+                                            <th scope="col">Contact No</th>
+                                            <th scope="col">Address</th>
+                                            <th scope="col">Email</th>
+                                            <th scope="col">NIC Number</th>
+                                            <th scope="col">Driving License ID</th>
+                                            <th scope="col">Availability Type</th>
+                                            <th scope="col">Role Type</th>
+                                            <th scope="col">User Name</th>
+                                            <th scope="col">Password</th>
+
+                                        </tr>
+                                        </thead>
+                                        <tbody id="driverTable"></tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
