--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -517,6 +517,7 @@
     <script src="../../assets/js/dashboardMain.js"></script>
 
     <!-- Controller JS File -->
+    <script src="../../controller/DriverController.js"></script>
     <script src="../../controller/DashBoardController.js"></script>
 
     <!-- Util JS File -->
