--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -44,6 +44,20 @@
                 </li>
                 <!-- End Search Icon-->
 
+                <li class="nav-item dropdown">
+
+                    <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+                        <i class="bi bi-bell"></i>
+                        <span class="badge bg-primary badge-number">4</span>
+                    </a>
+                    <!-- End Notification Icon -->
+
+                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
+
+                    </ul><!-- End Notification Dropdown Items -->
+
+                </li><!-- End Notification Nav -->
+
             </ul>
         </nav>
         <!-- End Icons Navigation -->
