--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -258,9 +258,19 @@
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
+            </li><!-- End Dashboard Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                </ul>
             </li>
-            <!-- End Dashboard Nav -->
+            <!-- End Forms Nav -->
+
         </ul>
+
     </aside>
     <!-- End Sidebar-->
 
