--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -265,6 +265,21 @@
                     <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                    <li>
+                        <a href="../adminPages/Reg_UserManage.html">
+                            <i class="bi bi-circle"></i><span>Customer</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../adminPages/DriverManage.html">
+                            <i class="bi bi-circle"></i><span>Driver</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../adminPages/CarManage.html">
+                            <i class="bi bi-circle"></i><span>Car</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <!-- End Forms Nav -->
