--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -284,6 +284,25 @@
             </li>
             <!-- End Forms Nav -->
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-layout-text-window-reverse"></i><span>Details</span><i
+                        class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                    <a href="PaymentDetails.html">
+                        <i class="bi bi-circle"></i><span>Payment Details</span>
+                    </a>
+                    </li>
+                    <li>
+                        <a href="RentDetails.html">
+                            <i class="bi bi-circle"></i><span>Rent Details</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End View Nav -->
+
         </ul>
 
     </aside>
