--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -300,8 +300,29 @@
                         </a>
                     </li>
                 </ul>
+            </li><!-- End View Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="CusomerRequest.html" id="myDetailsSection">
+                    <i class="bi bi-kanban"></i>
+                    <span>Rent Request</span>
+                </a>
             </li>
-            <!-- End View Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="IncomeDetails.html" id="incomeDetails">
+                    <i class="bi bi-kanban"></i>
+                    <span>Income Details</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="../login.html">
+                    <i class="bi bi-box-arrow-in-right"></i>
+                    <span>LogOut</span>
+                </a>
+            </li>
+            <!-- End Login Page Nav -->
 
         </ul>
 
