--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -329,6 +329,17 @@
     </aside>
     <!-- End Sidebar-->
 
+    <!-- ======= Main ======= -->
+    <main id="main" class="main">
+
+        <!-- ======= Car Manage ======= -->
+        <div class="pageTitle" id="pageFour">
+            <h1>Manage</h1>
+        </div>
+        <!-- End Car Manage -->
+    </main>
+    <!-- End #main -->
+
     <!-- Vendor JS Files -->
     <script src="../../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
