main section nav added

--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -335,6 +335,14 @@
         <!-- ======= Car Manage ======= -->
         <div class="pageTitle" id="pageFour">
             <h1>Manage</h1>
+            <section class="container-fluid mt-3" id="manageCar">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="../adminDashboard.html">Home</a></li>
+                        <li class="breadcrumb-item active">Rent Request</li>
+                    </ol>
+                </nav>
+            </section>
         </div>
         <!-- End Car Manage -->
     </main>
