main section nav content added

--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -342,6 +342,28 @@
                         <li class="breadcrumb-item active">Rent Request</li>
                     </ol>
                 </nav>
+
+                <div class="row mt-3">
+                    <!-- start content-->
+                    <div class="row">
+                        <!-- start col-->
+                        <div class="col-12">
+                            <!-- start card-->
+                            <div class="card info-card">
+                                <!-- start card-body -->
+                                <div class="card-body">
+                                    <!-- start row -->
+                                    <div class="row mt-3">
+                                    </div>
+                                    <!-- end row -->
+                                </div>
+                                <!-- end card-body -->
+                            </div>
+                        </div>
+                        <!-- end col-->
+                    </div>
+
+                </div>
             </section>
         </div>
         <!-- End Car Manage -->
