--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -354,6 +354,45 @@
                                 <div class="card-body">
                                     <!-- start row -->
                                     <div class="row mt-3">
+                                        <!-- start col-->
+                                        <div class="col-xl-12">
+                                            <!-- start booking request details -->
+                                            <form id="customerRequestForm" class="row mb-3">
+                                                <section id="secResponseDetails" class="row mx-0">
+                                                    <div class="mb-2 col-xl-3 col-sm-6">
+                                                        <label class="form-label" for="requestRentId">Rent ID<span
+                                                                class="text-danger"></span></label>
+                                                        <input class="form-control mt-1" id="requestRentId" readonly
+                                                               name="rent_Id"
+                                                               placeholder="Rent ID" type="text">
+                                                    </div>
+                                                    <div class="mb-2 col-xl-3 col-sm-6">
+                                                        <label class="form-label" for="driverId">Driver ID<span
+                                                                class="text-danger"></span></label>
+                                                        <select aria-label="Default select example" class="form-select m-1"
+                                                                id="driverId" name="driverId"
+                                                                placeholder="Driver Id"></select>
+                                                    </div>
+                                                    <div class="mb-2 col-xl-3 col-sm-6">
+                                                        <label class="form-label" for="userID">User ID<span
+                                                                class="text-danger"></span></label>
+                                                        <input class="form-control mt-1" id="userID" readonly
+                                                               name="useID"
+                                                               placeholder="User ID" type="text">
+                                                    </div>
+                                                    <div class="mb-2 col-xl-3 col-sm-6">
+                                                        <label class="form-label" for="requestState">Request State<span
+                                                                class="text-danger"></span></label>
+                                                        <input class="form-control mt-1" id="requestState" readonly
+                                                               name="requestState"
+                                                               placeholder="Request State" type="text">
+                                                    </div>
+
+                                                </section>
+                                            </form>
+                                            <!-- end booking request details -->
+                                        </div>
+                                        <!-- end col-->
                                     </div>
                                     <!-- end row -->
                                 </div>
