button content added

--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -391,6 +391,21 @@
                                                 </section>
                                             </form>
                                             <!-- end booking request details -->
+
+                                            <!-- start button content-->
+                                            <div class="mb-3 mt-2 d-grid gap-1 d-md-flex justify-content-md-end">
+                                                <button type="button" class="btn btn-success btn m-1 p-2" id="btnAccept">
+                                                    Accept
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn m-1 p-2" id="btnReject">
+                                                    Reject
+                                                </button>
+                                                <button type="button" class="btn btn-primary m-1 p-2" data-bs-toggle="modal"
+                                                        data-bs-target="#exampleModal">
+                                                    Payment
+                                                </button>
+                                            </div>
+                                            <!-- end button content-->
                                         </div>
                                         <!-- end col-->
                                     </div>
