--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -413,6 +413,18 @@
                                 </div>
                                 <!-- end card-body -->
                             </div>
+                            <div class="card info-card">
+                                <!-- start searchBar -->
+                                <div class="search-bar mt-4 ms-4">
+                                    <div class="search-form d-flex align-items-center">
+                                        <input type="search" name="car_Id" id="search_Id" placeholder="Search"
+                                               title="Enter search keyword">
+                                        <button type="button" title="Search"><i class="bi bi-search"></i></button>
+                                    </div>
+                                </div>
+                                <!-- end searchBar -->
+                            </div>
+                            <!-- end card-->
                         </div>
                         <!-- end col-->
                     </div>
