--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -423,6 +423,17 @@
                                     </div>
                                 </div>
                                 <!-- end searchBar -->
+
+                                <!-- start request table content-->
+                                <div class="row mt-1 mt-md-2 mt-lg-4 justify-content-around" style="height: 320px;">
+                                    <div class="col-11 justify-content-around sectionBorder"
+                                         style="height: 280px; background: white">
+                                        <div class="table-responsive customerTableDiv overflow-auto "
+                                             style="height: 300px;">
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- end request table content-->
                             </div>
                             <!-- end card-->
                         </div>
