--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -468,7 +468,16 @@
              aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Payment Rent</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-success" form="PayementToRent" id="btnPay">Pay</button>
+                    </div>
                 </div>
             </div>
         </div>
