rent controller class added

--- a/Front_End/pages/adminPages/CusomerRequest.html
+++ b/Front_End/pages/adminPages/CusomerRequest.html
@@ -587,6 +587,7 @@
 
     <!-- Controller JS File -->
     <script src="../../controller/DashBoardController.js"></script>
+    <script src="../../controller/RentController.js"></script>
 
     <!-- Util JS File -->
     <script src="../../util/alert.js" rel="script"></script>
