user dashboard script navigation added

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -556,5 +556,61 @@
     <script src="../util/alert.js" rel="script"></script>
     <script src="../util/validation.js" rel="script"></script>
 
+    <script>
+        $(document).ready(function () {
+            $("#bookingResponse").css('display', 'block');
+            $("#rentDetails").css('display', 'none');
+            $("#profileDetails").css('display', 'none');
+        });
+
+        $("#userDashboardSection").click(function () {
+            $("#bookingResponse").css('display', 'block');
+            $("#rentDetails").css('display', 'none');
+            $("#profileDetails").css('display', 'none');
+        });
+
+        $("#rentSection").click(function () {
+            $("#bookingResponse").css('display', 'none');
+            $("#rentDetails").css('display', 'block');
+            $("#profileDetails").css('display', 'none');
+        });
+
+        $("#bookingResponseSection").click(function () {
+            $("#bookingResponse").css('display', 'block');
+            $("#rentDetails").css('display', 'none');
+            $("#profileDetails").css('display', 'none');
+        });
+
+        $("#myDetailsSection,#userDetails,#userDetailss").click(function () {
+            $("#bookingResponse").css('display', 'none');
+            $("#rentDetails").css('display', 'none');
+            $("#profileDetails").css('display', 'block');
+        });
+        <!-- Initialize Swiper -->
+        const progressCircle = document.querySelector(".autoplay-progress svg");
+        const progressContent = document.querySelector(".autoplay-progress span");
+        var swiper = new Swiper(".mySwiper", {
+            spaceBetween: 30,
+            centeredSlides: true,
+            autoplay: {
+                delay: 2500,
+                disableOnInteraction: false
+            },
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev"
+            },
+            on: {
+                autoplayTimeLeft(s, time, progress) {
+                    progressCircle.style.setProperty("--progress", 1 - progress);
+                    progressContent.textContent = `${Math.ceil(time / 1000)}s`;
+                }
+            }
+        });
+    </script>
 </body>
 </html>
