--- a/Front_End/pages/adminPages/RentDetails.html
+++ b/Front_End/pages/adminPages/RentDetails.html
@@ -119,6 +119,16 @@
                     <!-- End Notification Dropdown Items -->
                 </li>
                 <!-- End Notification Nav -->
+
+                <li class="nav-item dropdown">
+
+                    <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+                        <i class="bi bi-chat-left-text"></i>
+                        <span class="badge bg-success badge-number">3</span>
+                    </a>
+                    <!-- End Messages Icon -->
+                </li>
+                <!-- End Messages Nav -->
             </ul>
         </nav>
         <!-- End Icons Navigation -->
