--- a/Front_End/pages/adminPages/RentDetails.html
+++ b/Front_End/pages/adminPages/RentDetails.html
@@ -287,6 +287,14 @@
                 </ul>
             </li>
             <!-- End Forms Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-layout-text-window-reverse"></i><span>Details</span><i
+                        class="bi bi-chevron-down ms-auto"></i>
+                </a>
+            </li>
+            <!-- End View Nav -->
         </ul>
 
     </aside>
