--- a/Front_End/pages/adminPages/RentDetails.html
+++ b/Front_End/pages/adminPages/RentDetails.html
@@ -346,6 +346,22 @@
                         <li class="breadcrumb-item active">Details / Rent Details</li>
                     </ol>
                 </nav>
+
+                <div class="row mt-3">
+                    <div class="card info-card">
+                        <!-- View Rent Details Table Start -->
+                        <div class="row mt-3 mt-md-2 mt-lg-4 justify-content-around"
+                             style="height: 490px;">
+                            <div class="col-11 justify-content-around sectionBorder"
+                                 style="height: 460px; background: white">
+                                <div class="table-responsive customerTableDiv overflow-auto "
+                                     style="height: 470px;">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- View Car Details Table End -->
+                    </div>
+                </div>
             </section>
         </div>
         <!-- End Car Manage -->
