--- a/Front_End/pages/adminPages/RentDetails.html
+++ b/Front_End/pages/adminPages/RentDetails.html
@@ -356,6 +356,24 @@
                                  style="height: 460px; background: white">
                                 <div class="table-responsive customerTableDiv overflow-auto "
                                      style="height: 470px;">
+                                    <table class="table text-nowrap table-light table-striped table-bordered table-hover">
+                                        <thead class="text-dark table-danger text-center  table-bordered">
+                                        <tr>
+                                            <th scope="col">Rent ID</th>
+                                            <th scope="col">Car ID</th>
+                                            <th scope="col">User ID</th>
+                                            <th scope="col">Driver ID</th>
+                                            <th scope="col">Driver Select</th>
+                                            <th scope="col">Rent Request</th>
+                                            <th scope="col">Pick Date</th>
+                                            <th scope="col">Pick Time</th>
+                                            <th scope="col">Return Time</th>
+                                            <th scope="col">Return Date</th>
+                                            <th scope="col">Location</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="rentAllDetails"></tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
