--- a/Front_End/pages/adminPages/PaymentDetails.html
+++ b/Front_End/pages/adminPages/PaymentDetails.html
@@ -256,6 +256,21 @@
     <aside id="sidebar" class="sidebar">
 
         <ul class="sidebar-nav" id="sidebar-nav">
+
+            <li class="nav-item">
+                <a class="nav-link " href="../adminDashboard.html">
+                    <i class="bi bi-grid"></i>
+                    <span>Dashboard</span>
+                </a>
+            </li>
+            <!-- End Dashboard Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+            </li>
+            <!-- End Forms Nav -->
         </ul>
     </aside>
     <!-- End Sidebar-->
