--- a/Front_End/pages/adminPages/PaymentDetails.html
+++ b/Front_End/pages/adminPages/PaymentDetails.html
@@ -269,8 +269,44 @@
                 <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
+                <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                    <li>
+                        <a href="../adminPages/Reg_UserManage.html">
+                            <i class="bi bi-circle"></i><span>Customer</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../adminPages/DriverManage.html">
+                            <i class="bi bi-circle"></i><span>Driver</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../adminPages/CarManage.html">
+                            <i class="bi bi-circle"></i><span>Car</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
             <!-- End Forms Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-layout-text-window-reverse"></i><span>Details</span><i
+                        class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                    <a href="PaymentDetails.html">
+                        <i class="bi bi-circle"></i><span>Payment Details</span>
+                    </a>
+                    </li>
+                    <li>
+                        <a href="RentDetails.html">
+                            <i class="bi bi-circle"></i><span>Rent Details</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End View Nav -->
         </ul>
     </aside>
     <!-- End Sidebar-->
