main Payment Manage added

--- a/Front_End/pages/adminPages/PaymentDetails.html
+++ b/Front_End/pages/adminPages/PaymentDetails.html
@@ -333,6 +333,46 @@
     </aside>
     <!-- End Sidebar-->
 
+    <!-- ======= Main ======= -->
+    <main id="main" class="main">
+
+        <!-- ======= Payment Manage ======= -->
+        <div class="pageTitle" id="pageFour">
+            <h1>Manage</h1>
+            <section class="container-fluid mt-3" id="managePayment">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="../adminDashboard.html">Home</a></li>
+                        <li class="breadcrumb-item active">Details / Payment Details</li>
+                    </ol>
+                </nav>
+
+                <div class="row mt-3">
+                    <div class="card info-card">
+                        <!-- start content-->
+                        <div class="row">
+                            <!-- start col-->
+                            <div class="col-12">
+                                <!-- start card-body -->
+                                <div class="card-body">
+                                    <!-- start row -->
+                                    <div class="row">
+                                    </div>
+                                    <!-- end row -->
+                                </div>
+                                <!-- end card-->
+                            </div>
+                            <!-- end col-->
+                        </div>
+                        <!-- end content-->
+                    </div>
+                </div>
+            </section>
+        </div>
+        <!-- End Car Manage -->
+    </main>
+    <!-- End #main -->
+
     <!-- Vendor JS Files -->
     <script src="../../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
