--- a/Front_End/pages/adminPages/IncomeDetails.html
+++ b/Front_End/pages/adminPages/IncomeDetails.html
@@ -332,6 +332,21 @@
     </aside>
     <!-- End Sidebar-->
 
+    <!-- ======= Main ======= -->
+    <main id="main" class="main">
+
+        <!-- ======= Income Details ======= -->
+        <div class="pageTitle" id="income">
+            <h1>Manage</h1>
+            <section class="container-fluid mt-3" id="manageCar">
+
+            </section>
+        </div>
+        <!-- End Income Details -->
+
+    </main>
+    <!-- End #main -->
+
     <!-- Vendor JS Files -->
     <script src="../../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
