--- a/Front_End/pages/adminPages/IncomeDetails.html
+++ b/Front_End/pages/adminPages/IncomeDetails.html
@@ -339,6 +339,17 @@
         <div class="pageTitle" id="income">
             <h1>Manage</h1>
             <section class="container-fluid mt-3" id="manageCar">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="../adminDashboard.html">Home</a></li>
+                        <li class="breadcrumb-item active">Income Details</li>
+                    </ol>
+                </nav>
+
+                <section class="section">
+                    <div class="row">
+                    </div>
+                </section>
 
             </section>
         </div>
