--- a/Front_End/pages/adminPages/IncomeDetails.html
+++ b/Front_End/pages/adminPages/IncomeDetails.html
@@ -375,6 +375,19 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-lg-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Daily Income</h5>
+
+                                    <!-- Line Chart -->
+                                    <div id="dailyIncomeChart" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
+                                    <!-- End Line CHart -->
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
