--- a/Front_End/pages/adminPages/IncomeDetails.html
+++ b/Front_End/pages/adminPages/IncomeDetails.html
@@ -415,6 +415,19 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-lg-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Monthly Income</h5>
+
+                                    <!-- Line Chart -->
+                                    <canvas id="monthlyIncomeChart" style="max-height: 400px; display: block; box-sizing: border-box; height: 359px; width: 719px;" width="719" height="359"></canvas>
+                                    <!-- End Line CHart -->
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
