login page refactored

--- a/Front_End/pages/login.html
+++ b/Front_End/pages/login.html
@@ -25,18 +25,18 @@
             <div class="col-xl-10 col-lg-12 col-md-9">
 
                 <div class="card o-hidden border-0 shadow-lg my-6 sectionBorder">
-                    <div class="card-body p-0">
+                    <div class="card-body p-0" style="background: #ececec">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
                             <div class="col-lg-6 d-none d-lg-block" style="background: url(../assets/img/login.jpeg);background-size: cover"></div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                        <h1 class="h4 text-gray-900 mb-4" style="font-weight:800">Welcome Back!</h1>
                                     </div>
                                     <form class="user m-2 p-3" id="loginForm">
                                         <div class="form-group">
-                                            <select class="form-control" id="role_Type" name="role_Type" style="border-radius: 30px;height: 3.5em">
+                                            <select class="form-control text-dark" id="role_Type" name="role_Type" style="border-radius: 30px;height: 3.5em">
                                                 <option value="RoleType">Choose Role</option>
                                                 <option value="ADMIN">ADMIN</option>
                                                 <option value="REGISTERED_USER">REGISTERED_USER</option>
@@ -59,7 +59,7 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <button id="btnLogin" type="button" class="btn btn-primary btn-user btn-block">
+                                        <button id="btnLogin" type="button" class="btn btn-dark btn-user btn-block">
                                             Login
                                         </button>
 
