dashboard html files refactored

--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -30,7 +30,7 @@
 
         <div class="d-flex align-items-center justify-content-between">
             <a href="reg_UserDashboard.html" class="logo d-flex align-items-center">
-                <span class="d-none d-lg-block">Easy <span>Rent.</span></span>
+                <span class="d-none d-lg-block">Easy<span>Rent</span></span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
         </div>
@@ -49,14 +49,14 @@
                 <li class="nav-item dropdown pe-3">
 
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="../assets/img/massage/profile-img.jpg" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">K.L Nimal</span>
+                        <img src="../assets/img/massage/profile-img2.jpg" alt="Profile" class="rounded-circle">
+                        <span class="d-none d-md-block dropdown-toggle ps-2">K.L Anna</span>
                     </a>
                     <!-- End Profile Iamge Icon -->
 
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
-                            <h6>K.L Nimal</h6>
+                            <h6>K.L Anna</h6>
                             <span>User</span>
                         </li>
                         <li>
@@ -182,25 +182,25 @@
                             <form>
                                 <div class="col col-lg-12 col-sm-8">
                                     <label class="form-label" for="responseRentId">Rent ID<span
-                                            class="text-danger"></span></label>
+                                            class="text-dark"></span></label>
                                     <input class="form-control" id="responseRentId" readonly
                                            name="rent_Id"
                                            placeholder="Rent ID" type="text">
                                 </div>
                             </form>
-                            <button type="button" class="btn btn-danger btn mt-4 m-4  h-50" id="btnDeleteRental">
+                            <button type="button" class="btn btn-dark btn mt-4 m-4  h-50" id="btnDeleteRental">
                                 Delete Rental
                             </button>
                         </div>
                         <!-- end button content-->
 
                         <!-- start response table content-->
-                        <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
+                        <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around">
                             <div class="col-11 justify-content-around sectionBorder"
-                                 style="height: 290px; background: white">
-                                <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
+                                 style="height: 290px;">
+                                <div class="table-responsive customerTableDiv overflow-auto ">
                                     <table class="table table-light table-striped table-bordered table-hover">
-                                        <thead class="text-dark table-danger text-nowrap text-center  table-bordered">
+                                        <thead class="text-light table-dark text-nowrap text-center  table-bordered">
                                         <tr>
                                             <th scope="col">Rent ID</th>
                                             <th scope="col">User ID</th>
@@ -246,6 +246,7 @@
                                                readonly placeholder="C00-001">
                                     </div>
                                 </di>
+
                                 <div class="row col-lg-6 gap-3 gap-lg-0 d-flex col-md-5 col-sm-6 col-xs-3 justify-content-md-around">
                                     <div class="col-lg-6">
                                         <label class="form-label" for="category_type">Category</label>
@@ -363,12 +364,12 @@
                 </div>
                 <div class="card info-card">
                     <!-- View Customer Details Table Start -->
-                    <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
+                    <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around">
                         <div class="col-11 justify-content-around sectionBorder"
-                             style="height: 290px; background: white">
-                            <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
+                             style="height: 290px;">
+                            <div class="table-responsive customerTableDiv overflow-auto ">
                                 <table class="table table-light table-striped table-bordered table-hover">
-                                    <thead class="text-dark table-danger text-center  table-bordered sticky-top">
+                                    <thead class="text-light table-dark text-center  table-bordered sticky-top">
                                     <tr>
                                         <th scope="col">Car Id</th>
                                         <th scope="col">PickUp Date</th>
