--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -27,7 +27,7 @@
 
         <div class="d-flex align-items-center justify-content-between">
             <a id="driverDashboard1" class="logo d-flex align-items-center">
-                <span class="d-none d-lg-block">Easy <span>Rent.</span></span>
+                <span class="d-none d-lg-block">Easy<span>Rent</span></span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
         </div>
@@ -43,13 +43,14 @@
                 <li class="nav-item dropdown pe-3">
 
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="../assets/img/massage/profile-img.jpg" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">K.L Samson</span>
+                        <img src="../assets/img/massage/profile-img2.jpg" alt="Profile" class="rounded-circle">
+                        <span class="d-none d-md-block dropdown-toggle ps-2">P.Susan</span>
                     </a>
                     <!-- End Profile Iamge Icon -->
+
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
-                            <h6>K.L Samson</h6>
+                            <h6>P.Susan</h6>
                             <span>Driver</span>
                         </li>
                         <li>
@@ -266,12 +267,11 @@
                                     <div class="row">
                                         <div class="col-xl-12">
                                             <div class="row">
-                                                <div class="table-responsive-xxl flex-grow-0 gap-3 col-xl-11 mt-4 sectionBorder"
-                                                     style="height: 400px; background: white;">
+                                                <div class="table-responsive-xxl flex-grow-0 gap-3 col-xl-11 mt-4 sectionBorder">
                                                     <div class="table-responsive customerTableDiv overflow-auto "
                                                          style="height: 420px;">
-                                                        <table class="text-nowrap table table-light table-striped table-bordered table-hover">
-                                                            <thead class="text-dark table-danger text-center  table-bordered">
+                                                        <table class="text-nowrap table table-striped table-bordered table-hover">
+                                                            <thead class="text-light table-dark text-center  table-bordered">
                                                             <tr>
                                                                 <th scope="col">Rent ID</th>
                                                                 <th scope="col">Car ID</th>
