--- a/Front_End/pages/login.html
+++ b/Front_End/pages/login.html
@@ -15,7 +15,7 @@
     <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
 </head>
 
-<body style="background: #ecf0f1;">
+<body style="background: #979797;">
 
     <div class="container">
 
