--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -327,11 +327,11 @@
                                         <span class="control-error"></span>
                                     </div>
 
-                                    <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
-                                        <button class="btn btn-success me-md-1" id="btnSaveCar" type="button"
+                                    <div class="mt-4 mb-3 gap-1 d-sm-flex justify-content-md-center">
+                                        <button class="btn btn-success" id="btnSaveCar" type="button"
                                                 formaction="driverForm">Save
                                         </button>
-                                        <button type="button" class="btn btn-warning me-md-1" id="btnUpdateCar">Update
+                                        <button type="button" class="btn btn-warning" id="btnUpdateCar">Update
                                         </button>
                                         <button type="button" class="btn btn-danger" id="btnDeleteCar">Delete</button>
                                     </div>
