--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -299,8 +299,8 @@
                                         </div>
 
                                         <div class="mt-4 mb-3 gap-2 justify-content-md-center">
-                                            <button class="btn btn-success me-md-1" id="btnSaveDriver" type="button" formaction="driverForm">Save</button>
-                                            <button type="button" class="btn btn-warning m-1" id="btnUpdateDriver">Update</button>
+                                            <button class="btn btn-success" id="btnSaveDriver" type="button" formaction="driverForm">Save</button>
+                                            <button type="button" class="btn btn-warning" id="btnUpdateDriver">Update</button>
                                             <button type="button" class="btn btn-danger" id="btnDeleteDriver">Delete</button>
                                         </div>
                                     </section>
