--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -82,14 +82,11 @@
 
       <div class="section-header">
         <h2>About Us</h2>
-        <p>Learn More <span>About Us</span></p>
+        <p>Our Mission <span>and Values</span></p>
       </div>
 
       <div class="row gy-4">
-        <div class="col-lg-7 position-relative about-img"
-             data-aos="fade-up" data-aos-delay="150" style="background-image: url(assets/img/abo1.jpeg); ">
-        </div>
-        <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-lg-7 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
           <div class="content ps-0 ps-lg-5">
             <p class="fst-italic">
               Welcome to <span style=" font-weight: 600;">Easy Car Rental</span>, your gateway to convenient and flexible car rentals. Our service is designed with you in mind, offering a range of features to make your journey as smooth as possible. Here are five key features that set us apart:
@@ -107,12 +104,16 @@
               </li>
             </ul>
             <p>
-              <span style=" font-weight: 600;">Your journey starts here.</span>
+              <span style=" font-weight: 600; border-bottom: 2px solid #3d3d3d">Your journey starts here..</span>
               <br>
               At <span style=" font-weight: 600;">Easy Car Rental</span>, we're committed to providing you with a seamless and enjoyable car rental experience. Our diverse fleet, user-friendly booking system, transparent pricing, round-the-clock support, and flexible rental options are just some of the ways we aim to make your travel plans stress-free. Join us and embark on your next adventure with confidence. Book your car today and experience the freedom of the open road.
             </p>
           </div>
         </div>
+        <div class="col-lg-5 position-relative about-img"
+             data-aos="fade-up" data-aos-delay="150" style="background-image: url(assets/img/ab1.jpg); ">
+        </div>
+
       </div>
 
     </div>
@@ -125,7 +126,7 @@
 
         <div class="section-header">
           <h2>Our Cars</h2>
-          <p>Check Our <span>Car Stock</span></p>
+          <p>Explore Our <span>Car Inventory</span></p>
         </div>
 
         <div class="form-container sectionBorder">
@@ -195,7 +196,8 @@
 
       <div class="section-header">
         <h2>Register A Customer</h2>
-        <p>Register <span>Your Stay</span> With Us</p>
+<!--        Sign Up for Access-->
+        <p>Get Started <span>with</span> Easy Car Rental</p>
       </div>
 
       <div class="row g-0">
@@ -308,7 +310,7 @@
 
       <div class="section-header">
         <h2>Contact</h2>
-        <p>Need Help? <span>Contact Us</span></p>
+        <p>Reach Out to <span>Easy Car Rental</span></p>
       </div>
       <div class="row gy-4 mt-3">
 
