--- a/Front_End/pages/adminPages/Reg_UserManage.html
+++ b/Front_End/pages/adminPages/Reg_UserManage.html
@@ -305,10 +305,10 @@
                                         <span class="control-error"></span>
                                     </div>
                                     <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
-                                        <button class="btn btn-warning me-md-1" id="btnUpdateCustomer" type="button">
+                                        <button class="btn btn-dark me-md-1" id="btnUpdateCustomer" type="button">
                                             Update
                                         </button>
-                                        <button type="button" class="btn btn-danger me-md-1" id="btnDeleteCustomer">Delete
+                                        <button type="button" class="btn btn-secondary me-md-1" id="btnDeleteCustomer">Delete
                                         </button>
                                     </div>
                                 </section>
