--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -328,12 +328,12 @@
                                     </div>
 
                                     <div class="mt-4 mb-3 gap-1 d-sm-flex justify-content-md-center">
-                                        <button class="btn btn-success" id="btnSaveCar" type="button"
+                                        <button class="btn btn-dark" id="btnSaveCar" type="button"
                                                 formaction="driverForm">Save
                                         </button>
-                                        <button type="button" class="btn btn-warning" id="btnUpdateCar">Update
+                                        <button type="button" class="btn btn-secondary" id="btnUpdateCar">Update
                                         </button>
-                                        <button type="button" class="btn btn-danger" id="btnDeleteCar">Delete</button>
+                                        <button type="button" class="btn btn-dark" id="btnDeleteCar">Delete</button>
                                     </div>
                                 </section>
                             </form>
