--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -350,9 +350,9 @@
                                             </div>
                                         </div>
                                         <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
-                                            <button class="btn btn-warning me-md-1" id="btnAddCart" type="button">Add Cart
+                                            <button class="btn btn-dark me-md-1" id="btnAddCart" type="button">Add Cart
                                             </button>
-                                            <button type="button" class="btn btn-success me-md-1" id="btnReservation">
+                                            <button type="button" class="btn btn-secondary me-md-1" id="btnReservation">
                                                 Reservation
                                             </button>
                                         </div>
@@ -497,7 +497,7 @@
                                                 </div>
                                             </div>
                                             <div class="mb-3 d-grid gap-1 d-md-flex justify-content-md-end">
-                                                <button type="button" class="btn btn-warning btn me-md-1"
+                                                <button type="button" class="btn btn-dark btn me-md-1"
                                                         id="updateCustomer">
                                                     Update
                                                 </button>
