--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -299,9 +299,9 @@
                                         </div>
 
                                         <div class="mt-4 mb-3 gap-2 justify-content-md-center">
-                                            <button class="btn btn-dark" id="btnSaveDriver" type="button" formaction="driverForm">Save</button>
-                                            <button type="button" class="btn btn-secondary" id="btnUpdateDriver">Update</button>
-                                            <button type="button" class="btn btn-dark" id="btnDeleteDriver">Delete</button>
+                                            <button class="btn btn-dark text-light" id="btnSaveDriver" type="button" formaction="driverForm">Save</button>
+                                            <button type="button" class="btn btn-secondary text-light" id="btnUpdateDriver">Update</button>
+                                            <button type="button" class="btn btn-dark text-light" id="btnDeleteDriver">Delete</button>
                                         </div>
                                     </section>
                                 </form>
