--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -188,7 +188,7 @@
                                            placeholder="Rent ID" type="text">
                                 </div>
                             </form>
-                            <button type="button" class="btn btn-dark btn mt-4 m-4  h-50" id="btnDeleteRental">
+                            <button type="button" class="btn btn-dark text-light btn mt-4 m-4  h-50" id="btnDeleteRental">
                                 Delete Rental
                             </button>
                         </div>
@@ -350,9 +350,9 @@
                                             </div>
                                         </div>
                                         <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
-                                            <button class="btn btn-dark me-md-1" id="btnAddCart" type="button">Add Cart
+                                            <button class="btn btn-dark text-light me-md-1" id="btnAddCart" type="button">Add Cart
                                             </button>
-                                            <button type="button" class="btn btn-secondary me-md-1" id="btnReservation">
+                                            <button type="button" class="btn btn-secondary text-light me-md-1" id="btnReservation">
                                                 Reservation
                                             </button>
                                         </div>
@@ -497,7 +497,7 @@
                                                 </div>
                                             </div>
                                             <div class="mb-3 d-grid gap-1 d-md-flex justify-content-md-end">
-                                                <button type="button" class="btn btn-dark btn me-md-1"
+                                                <button type="button" class="btn btn-dark text-light btn me-md-1"
                                                         id="updateCustomer">
                                                     Update
                                                 </button>
